// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render active element 1`] = `
.c0 {
  color: #0052CC;
  padding: 6px 25px;
  list-style-type: none;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<li
  className="c0"
/>
`;

exports[`Wrapper should render inactive element 1`] = `
.c0 {
  color: #42526E;
  padding: 6px 25px;
  list-style-type: none;
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c0:hover {
  background-color: #E5E8EC;
}

<li
  className="c0"
/>
`;
